--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@ html {
 *, ::after, ::before {
   box-sizing: inherit;
 }
-
-body {
+sbody {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 1.5; 
