--- a/src/Section/style.css
+++ b/src/Section/style.css
@@ -15,8 +15,7 @@
     grid-template-columns: 1fr auto auto;
     align-items: center;
     border-bottom: 1px solid rgb(216, 216, 216);
-    padding: 0;  
-    margin: 0 20px;
+    padding: 0 20px;
 }
 @media(max-width: 767px) {
     .section__tasks{
